# ChangeLog for net-dns/dnsmasq
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.1 2002/06/29 00:55:03 bangert Exp $

*dnsmasq-1.6 (6 Jun 2002)
  6 Jun 2002; Donny Davies <woodchip@gentoo.org> :
  Based on a submission by bardur-gta@odense.kollegienet.dk; #2079.