@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/pdnsd/Attic/pdnsd-1.1.6-r7.ebuild,v 1.5 2002/08/14 12:10:49 murphy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/pdnsd/Attic/pdnsd-1.1.6-r7.ebuild,v 1.6 2002/08/30 11:20:23 cybersystem Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="Proxy DNS server with permanent caching"
@@ -11,7 +11,7 @@ DEPEND="virtual/glibc"
 
 SLOT="0"
 LICENSE="BSD | GPL-2"
-KEYWORDS="x86 sparc sparc64"
+KEYWORDS="x86 ppc sparc sparc64"
 
 src_compile() {
 
