@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/pdnsd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.2 2002/08/05 15:43:25 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/pdnsd/ChangeLog,v 1.3 2002/08/30 11:20:23 cybersystem Exp $
+
+  30 Aug 2002; Sascha Schwabbauer <cybersystem@gentoo.org> :
+
+  Added ppc to keywords.
 
 *pdnsd-1.1.7a (05 Aug 2002)
 
